      + renamed to <file>_ui.py because from <file>.py you cannot import <file>
        (urwid UI had this problem)
    - reportbug/{submit.py,utils.py}, bin/{querybts,reportbug}
      + fixed for ui file rename
    - reportbug/ui/text_ui.py
      + disabled utils.NEWBIELINE check to avoid circular import between text
        and utils ******** WE NEED TO FIND A SOLUTION TO THIS **********

 -- Sandro Tosi <matrixhasu@gmail.com>  Mon, 01 Sep 2008 00:45:25 +0200

reportbug (3.45) unstable; urgency=low

  * reportbuglib/reportbug_ui_urwid.py
    - added get_password function; thanks to Torsten Wiebke and Jan Muszynski
      for the reports; Closes: #494509, #491328
  * reportbuglib/debianbts.py
    - added removal of cruft from BTS parsed page; thanks to Davide Prina, Dan
      Greene and Paul Menzel for the reports; Closes: #494545, #495018, #495050

 -- Sandro Tosi <matrixhasu@gmail.com>  Sat, 16 Aug 2008 15:20:38 +0200

reportbug (3.44) unstable; urgency=medium

  [ Chris Lawrence ]
  * reportbug
    + Yet another character set issue fix.  (Closes: #492240)

  [ Sandro Tosi ]
  * debian/control
    - changed build-dep-indep from python-dev to python
    - bump required Python version to >= 2.5; thanks to Gilles Sadowski for
      the report; Closes: #492490 (RC bug, hence urgency set to medium)

 -- Sandro Tosi <matrixhasu@gmail.com>  Sat, 26 Jul 2008 19:17:44 +0200

reportbug (3.43) unstable; urgency=medium

  [ Ben Finney ]
  * reportbuglib/reportbug_ui_urwid.py
    + Ensure 'spawn_editor' is available for 'urwid' interface
      (closes: #488928).

  [ Sandro Tosi ]
  * reportbuglib/reportbug.py, reportbug
    - reports status of suggested packages; thanks to Ari Pollak for the
      report; Closes: #441056
  * reportbug
    - fixed packages list generation for a file search if run not in a tty (or
      via --template); thanks to Dan Jacobson for the report; Closes: #489515
    - for serious bugs, clearly states that "unknown" section downgrades to