@@ -60,6 +60,10 @@ from reportbug import debianbts
 from reportbug import checkbuildd
 import reportbug.ui.text_ui as ui
 
+from reportbug.ui import (
+    UIS, AVAILABLE_UIS
+    )
+
 try:
     gettext.install('reportbug')
 except IOError:
@@ -430,9 +434,9 @@ def offer_configuration(options):
                    utils.MODES, 'Select mode: ', options.mode,
                    order=utils.MODELIST)
     uis = dict()
-    for i in utils.AVAILABLE_UIS:
-        if (i in utils.UIS) and i != 'newt':
-            uis[i] = utils.UIS[i]
+    for i in AVAILABLE_UIS:
+        if (i in UIS) and i != 'newt':
+            uis[i] = UIS[i]
     if len(uis) > 1:
         interface = ui.menu(
             'Please choose the default interface for reportbug.', uis,
@@ -758,7 +762,7 @@ def main():
     parser.add_option('-u', '--interface', '--ui', action='callback',
                       callback=verify_option, type='string', dest='interface',
                       callback_args=('Valid user interfaces',
-                                     utils.AVAILABLE_UIS),
+                                     AVAILABLE_UIS),
                       help='choose which user interface to use')
     parser.add_option('-Q', '--query-only', action='store_true',
                       dest='queryonly', help='only query the BTS')
